<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent" android:orientation="vertical">

	<TextView android:id="@+id/TextView01" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/app_name" android:textSize="25px"
		android:layout_gravity="center_horizontal" />

	<TextView android:id="@+id/TextBlindsGoUp" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:text="@string/timeToBlindsGoUp"
		android:layout_gravity="center_horizontal" android:textSize="20px" />

	<TableLayout android:id="@+id/TableLayout01" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_gravity="center_horizontal">

		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal" android:id="@+id/TextTimer"
			android:includeFontPadding="false" android:text="00:00" android:textSize="40px"
			android:textColor="@android:color/white" />

	</TableLayout>

	<ImageView android:src="@drawable/poker01" android:layout_width="fill_parent"
		android:id="@+id/pokerImage"
		android:layout_height="wrap_content" 
		android:layout_gravity="center_vertical|center_horizontal" />
	
	<TableLayout android:layout_height="wrap_content" android:layout_width="fill_parent"
		android:id="@+id/LayoutTblBlinds">
		
		<TableRow>
			<TextView android:id="@+id/textViewBigBlind" 
				android:text="@string/bigBlind"
				android:layout_gravity="left" 
				android:layout_width="wrap_content"/>
			<TextView android:id="@+id/BigBlindValue"
				android:text="@string/bigBlind"
				android:layout_gravity="right"
				android:layout_width="fill_parent" />
		</TableRow>
	</TableLayout>
	
	
	<LinearLayout android:layout_width="fill_parent" android:id="@+id/linearLayout1"
		android:layout_height="wrap_content">

			
		
	</LinearLayout>

	<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
		android:id="@+id/TextViewSmallBlind" android:text="@string/smallBlind" />
	<Button android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/ButtonPause"
		android:layout_gravity="center_horizontal" android:text="@string/pauseTimer" />
</LinearLayout>
